--- a/arch/arm64/configs/sdm845.config
+++ b/arch/arm64/configs/sdm845.config
@@ -191,6 +191,7 @@ CONFIG_CRYPTO_LZ4=m
 CONFIG_LZ4_COMPRESS=m
 
 # Disable all unrelated stuffs afaik
+CONFIG_XEN_PCIDEV_STUB=n
 CONFIG_PSTORE_DEFLATE_COMPRESS=n
 CONFIG_HIBERNATION=n
 CONFIG_FW_LOADER_USER_HELPER=n
