fixup! sdm845.config: switch to simplefb

--- a/arch/arm64/configs/sdm845.config
+++ b/arch/arm64/configs/sdm845.config
@@ -81,15 +81,15 @@ CONFIG_LEDS_TRIGGER_ACTIVITY=y
 
 CONFIG_RPMSG_CHAR=y
 CONFIG_QCOM_Q6V5_ADSP=m
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HS=y
-CONFIG_BT_LE=y
-CONFIG_HID_BATTERY_STRENGTH=y
-CONFIG_HIDRAW=y
+CONFIG_BT_RFCOMM=m
+CONFIG_BT_RFCOMM_TTY=m
+CONFIG_BT_BNEP=m
+CONFIG_BT_BNEP_MC_FILTER=m
+CONFIG_BT_BNEP_PROTO_FILTER=m
+CONFIG_BT_HS=m
+CONFIG_BT_LE=m
+CONFIG_HID_BATTERY_STRENGTH=m
+CONFIG_HIDRAW=m
 CONFIG_QCOM_COINCELL=m
 CONFIG_QCOM_FASTRPC=m
 CONFIG_QCOM_SPMI_VADC=y
@@ -816,3 +816,37 @@ CONFIG_FPGA_REGION=n
 CONFIG_OF_FPGA_REGION=n
 CONFIG_INTERCONNECT_IMX=n
 CONFIG_INTERCONNECT_IMX8MQ=n
+CONFIG_BROADCOM_PHY=n
+CONFIG_BCM54140_PHY=n
+CONFIG_MARVELL_PHY=n
+CONFIG_MARVELL_10G_PHY=n
+CONFIG_AT803X_PHY=n
+CONFIG_ROCKCHIP_PHY=n
+CONFIG_MDIO_BITBANG=n
+CONFIG_PCS_XPCS=n
+CONFIG_USB_PEGASUS=n
+CONFIG_USB_RTL8150=n
+CONFIG_USB_RTL8152=n
+CONFIG_USB_LAN78XX=n
+CONFIG_USB_USBNET=n
+CONFIG_USB_NET_DM9601=n
+CONFIG_USB_NET_SR9800=n
+CONFIG_USB_NET_SMSC75XX=n
+CONFIG_USB_NET_SMSC95XX=n
+CONFIG_USB_NET_MCS7830=n
+CONFIG_KEYBOARD_ATKBD=n
+CONFIG_KEYBOARD_CROS_EC=n
+CONFIG_MOUSE_PS2=n
+CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_GOODIX=n
+CONFIG_TOUCHSCREEN_EDT_FT5X06=n
+CONFIG_SERIO_AMBAKMI=n
+CONFIG_SERIAL_8250=n
+CONFIG_SERIAL_8250_DW=n
+CONFIG_VFIO=n
+CONFIG_VFIO_PCI=n
+CONFIG_VIRTIO_PCI=n
+CONFIG_VIRTIO_BALLOON=n
+CONFIG_VIRTIO_MMIO=n
+CONFIG_XEN_DEV_EVTCHN=n
+CONFIG_XENFS=n
